<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="language">Change Language</string>
    <string name="fragment_movie_title">Movie</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="fav_tvshow">Favorite TV</string>
    <string name="fragment_tvshow_title">TV Show</string>
    <string name="content_desc">this image contain poster of movie</string>
    <string name="rating_subtitle">Rating</string>
    <string name="language_subtitle">Language</string>
    <string name="vote_count">Vote</string>
    <string name="storyline_subtitle">Storyline</string>

    <string name="myfavorite">My Favorite</string>
    <string name="mymain">Main Activity</string>
    <string name="fav_title">Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="empty_text">empty</string>
    <string name="daily">Daily Notification</string>
    <string name="notif">Notification Release</string>
    <string name="attachment_release">Reminder Release Today</string>
    <string name="attachment">Reminder For Return To App</string>
    <string name="menu_notif_setting">Notification Setting</string>
    <string name="search">Search</string>

</resources>
