<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/language"
        app:showAsAction="never"/>
    <item
        android:id="@+id/myfav"
        android:title="@string/myfavorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mymain"
        android:title="@string/mymain"
        app:showAsAction="never"/>

    <item
        app:showAsAction="never"
        android:id="@+id/notification_setting"
        android:title="@string/menu_notif_setting" />
    <item
        android:id="@+id/action_search"
        android:title="@string/app_name"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
</menu>